updated booking page

--- a/beauty-businesses.html
+++ b/beauty-businesses.html
@@ -113,20 +113,13 @@
                             <a href="index.html#home" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Home</a>
                             <a href="search-results.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                             <a href="offers.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
-                            <a href="blog.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Blog</a>
                         </div>
                     <div class="flex items-center space-x-3">
                         <a href="business-register.html" class="px-3 py-2 rounded-full bg-gradient-to-r from-neon-green to-green-500 text-white font-semibold hover:from-green-500 hover:to-green-600 transition-all duration-300 text-sm">
                             <i class="fas fa-plus mr-1"></i>List Business
                         </a>
-                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal()">
+                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="saveBasket(); window.location.href='customer-login.html'">
                             <i class="fas fa-sign-in-alt mr-1"></i>Sign In
-                        </button>
-                        <button id="signupBtn" class="px-3 py-2 rounded-full bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="toggleSignupModal()">
-                            <i class="fas fa-user-plus mr-1"></i>Sign Up
-                        </button>
-                        <button id="signOutBtn" class="px-2 py-2 rounded-full border border-red-500/50 text-red-400 hover:bg-red-500/10 transition-all duration-300 hidden" onclick="signOut()" title="Sign Out">
-                            <i class="fas fa-door-open"></i>
                         </button>
                     </div>
                 </div>
@@ -155,14 +148,14 @@
                         <a href="business-register.html" class="block w-full py-3 rounded-xl bg-gradient-to-r from-neon-green to-green-500 text-white font-semibold hover:from-green-500 hover:to-green-600 transition-all duration-300 text-center" onclick="closeMobileMenu()">
                             <i class="fas fa-plus mr-2"></i>List Your Business
                         </a>
-                        <button class="block w-full py-3 rounded-xl border border-white/20 text-white font-semibold hover:bg-white/10 transition-all duration-300 text-center" onclick="toggleLoginModal(); closeMobileMenu();">
+                        <button class="block w-full py-3 rounded-xl border border-white/20 text-white font-semibold hover:bg-white/10 transition-all duration-300 text-center" onclick="saveBasket(); window.location.href='customer-login.html'; closeMobileMenu();">
                             <i class="fas fa-sign-in-alt mr-2"></i>Sign In
                         </button>
                         <button class="block w-full py-3 rounded-xl bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-center" onclick="toggleSignupModal(); closeMobileMenu();">
                             <i class="fas fa-user-plus mr-2"></i>Sign Up
                         </button>
                         <button id="mobileSignOutBtn" class="block w-full py-3 rounded-xl border border-red-500/50 text-red-400 hover:bg-red-500/10 transition-all duration-300 text-center hidden" onclick="signOut(); closeMobileMenu();">
-                            <i class="fas fa-door-open mr-2"></i>Sign Out
+                            <i class="fas fa-sign-out-alt mr-2"></i>Sign Out
                         </button>
                     </div>
                 </div>
@@ -195,7 +188,7 @@
                             placeholder="Enter your city or region" 
                             class="w-full px-4 py-3 rounded-lg bg-charcoal border border-white/20 text-white placeholder-light-grey focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 input-glow"
                         >
-                    </div>
+            </div>
                     <div class="flex-1">
                         <label class="block text-light-grey mb-2 font-medium">Postcode</label>
                         <input 
@@ -203,16 +196,16 @@
                             placeholder="Enter postcode" 
                             class="w-full px-4 py-3 rounded-lg bg-charcoal border border-white/20 text-white placeholder-light-grey focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 input-glow"
                         >
-                    </div>
+                        </div>
                     <div class="flex-1">
                         <label class="block text-light-grey mb-2 font-medium">Distance</label>
                         <select class="w-full px-4 py-3 rounded-lg bg-charcoal border border-white/20 text-white focus:outline-none focus:border-neon-blue focus:ring-2 focus:ring-neon-blue/20 transition-all duration-300 input-glow">
-                            <option value="5">Within 5 miles</option>
-                            <option value="10">Within 10 miles</option>
-                            <option value="25">Within 25 miles</option>
-                            <option value="50">Within 50 miles</option>
-                        </select>
-                    </div>
+                                <option value="5">Within 5 miles</option>
+                                <option value="10">Within 10 miles</option>
+                                <option value="25">Within 25 miles</option>
+                                <option value="50">Within 50 miles</option>
+                            </select>
+                        </div>
                     <div class="flex space-x-3">
                         <button type="submit" class="px-6 py-3 rounded-lg bg-gradient-to-r from-neon-blue to-neon-green text-white font-semibold hover:from-neon-green hover:to-neon-blue transition-all duration-300 neon-glow">
                             <i class="fas fa-search mr-2"></i>Search
@@ -266,8 +259,8 @@
                             <h3 class="text-xl font-bold text-white font-poppins">Elite Beauty Lounge</h3>
                             <span class="px-3 py-1 rounded-full text-sm font-medium bg-neon-blue/20 text-neon-blue border border-neon-blue/30">
                                 Beauty
-                            </span>
-                        </div>
+                                </span>
+                            </div>
                         <div class="flex items-center text-yellow-400 mb-3">
                             <i class="fas fa-star text-sm"></i>
                             <i class="fas fa-star text-sm"></i>
@@ -275,11 +268,11 @@
                             <i class="fas fa-star text-sm"></i>
                             <i class="fas fa-star text-sm"></i>
                             <span class="ml-2 text-sm text-light-grey">4.9 (127 reviews)</span>
-                        </div>
+                                </div>
                         <div class="flex items-center text-light-grey mb-3">
                             <i class="fas fa-map-marker-alt mr-2"></i>
                             <span class="text-sm">123 Beauty Lane, London</span>
-                        </div>
+                            </div>
                         <div class="flex items-center text-light-grey mb-4">
                             <i class="fas fa-route mr-2"></i>
                             <span class="text-sm">0.5 miles away</span>
@@ -309,9 +302,9 @@
                             <span class="ml-2 text-sm text-light-grey">4.8 (89 reviews)</span>
                         </div>
                         <div class="flex items-center text-light-grey mb-3">
-                            <i class="fas fa-map-marker-alt mr-2"></i>
+                                <i class="fas fa-map-marker-alt mr-2"></i>
                             <span class="text-sm">456 Glamour Street, London</span>
-                        </div>
+                            </div>
                         <div class="flex items-center text-light-grey mb-4">
                             <i class="fas fa-route mr-2"></i>
                             <span class="text-sm">1.3 miles away</span>
@@ -339,9 +332,9 @@
                             <i class="fas fa-star text-sm"></i>
                             <i class="fas fa-star text-sm"></i>
                             <span class="ml-2 text-sm text-light-grey">4.7 (156 reviews)</span>
-                        </div>
+                            </div>
                         <div class="flex items-center text-light-grey mb-3">
-                            <i class="fas fa-map-marker-alt mr-2"></i>
+                                <i class="fas fa-map-marker-alt mr-2"></i>
                             <span class="text-sm">789 Elegance Avenue, London</span>
                         </div>
                         <div class="flex items-center text-light-grey mb-4">
@@ -394,6 +387,7 @@
                         <a href="contact.html" class="hover:text-neon-blue transition-colors font-medium">Contact</a>
                         <a href="privacy.html" class="hover:text-neon-blue transition-colors font-medium">Privacy</a>
                         <a href="terms.html" class="hover:text-neon-blue transition-colors font-medium">Terms</a>
+                        <a href="blog.html" class="hover:text-neon-blue transition-colors font-medium">Blog</a>
                     </div>
                 </div>
                 <div class="flex justify-center space-x-6">
