--- a/barber-businesses.html
+++ b/barber-businesses.html
@@ -113,20 +113,13 @@
                             <a href="index.html#home" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Home</a>
                             <a href="search-results.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                             <a href="offers.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
-                            <a href="blog.html" class="text-light-grey hover:text-neon-pink transition-colors duration-300 font-medium">Blog</a>
                         </div>
                     <div class="flex items-center space-x-3">
                         <a href="business-register.html" class="px-3 py-2 rounded-full bg-gradient-to-r from-neon-green to-green-500 text-white font-semibold hover:from-green-500 hover:to-green-600 transition-all duration-300 text-sm">
                             <i class="fas fa-plus mr-1"></i>List Business
                         </a>
-                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal()">
+                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="saveBasket(); window.location.href='customer-login.html'">
                             <i class="fas fa-sign-in-alt mr-1"></i>Sign In
-                        </button>
-                        <button id="signupBtn" class="px-3 py-2 rounded-full bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="toggleSignupModal()">
-                            <i class="fas fa-user-plus mr-1"></i>Sign Up
-                        </button>
-                        <button id="signOutBtn" class="px-2 py-2 rounded-full border border-red-500/50 text-red-400 hover:bg-red-500/10 transition-all duration-300 hidden" onclick="signOut()" title="Sign Out">
-                            <i class="fas fa-door-open"></i>
                         </button>
                     </div>
                 </div>
@@ -155,14 +148,14 @@
                         <a href="business-register.html" class="block w-full py-3 rounded-xl bg-gradient-to-r from-neon-green to-green-500 text-white font-semibold hover:from-green-500 hover:to-green-600 transition-all duration-300 text-center" onclick="closeMobileMenu()">
                             <i class="fas fa-plus mr-2"></i>List Your Business
                         </a>
-                        <button class="block w-full py-3 rounded-xl border border-white/20 text-white font-semibold hover:bg-white/10 transition-all duration-300 text-center" onclick="toggleLoginModal(); closeMobileMenu();">
+                        <button class="block w-full py-3 rounded-xl border border-white/20 text-white font-semibold hover:bg-white/10 transition-all duration-300 text-center" onclick="saveBasket(); window.location.href='customer-login.html'; closeMobileMenu();">
                             <i class="fas fa-sign-in-alt mr-2"></i>Sign In
                         </button>
                         <button class="block w-full py-3 rounded-xl bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-center" onclick="toggleSignupModal(); closeMobileMenu();">
                             <i class="fas fa-user-plus mr-2"></i>Sign Up
                         </button>
                         <button id="mobileSignOutBtn" class="block w-full py-3 rounded-xl border border-red-500/50 text-red-400 hover:bg-red-500/10 transition-all duration-300 text-center hidden" onclick="signOut(); closeMobileMenu();">
-                            <i class="fas fa-door-open mr-2"></i>Sign Out
+                            <i class="fas fa-sign-out-alt mr-2"></i>Sign Out
                         </button>
                     </div>
                 </div>
@@ -394,6 +387,7 @@
                         <a href="contact.html" class="hover:text-neon-blue transition-colors font-medium">Contact</a>
                         <a href="privacy.html" class="hover:text-neon-blue transition-colors font-medium">Privacy</a>
                         <a href="terms.html" class="hover:text-neon-blue transition-colors font-medium">Terms</a>
+                        <a href="blog.html" class="hover:text-neon-blue transition-colors font-medium">Blog</a>
                     </div>
                 </div>
                 <div class="flex justify-center space-x-6">
