updated booking page, sing in and sign up page

--- a/booking-confirmation.html
+++ b/booking-confirmation.html
@@ -621,7 +621,7 @@
                 This booking is subject to Royal Hair Studio's booking policy. Refunds and cancellations are managed according to this policy.
             </p>
             <div class="policy-links">
-                <a href="#" class="policy-link">Venue Booking Policy</a>
+                <a href="cancellation-policy.html" target="_blank" class="policy-link">Royal Hair Studio's Cancellation Policy</a>
                 <a href="terms.html" class="policy-link">Terms & Conditions</a>
                 <a href="privacy.html" class="policy-link">Privacy Policy</a>
             </div>
