--- a/blog.html
+++ b/blog.html
@@ -142,7 +142,7 @@
                     
                     <!-- Sign In / Customer Menu -->
                     <div class="auth-links" id="authLinks" style="align-items: center; gap: 0.5rem;">
-                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal()">
+                        <button id="loginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal(event)">
                             <i class="fas fa-sign-in-alt mr-1"></i>Sign In
                         </button>
                     </div>
@@ -188,7 +188,7 @@
                     
                     <!-- Account Icon -->
                     <div class="auth-links" id="mobileAuthLinks" style="align-items: center; gap: 0.5rem;">
-                        <button id="mobileLoginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal()">
+                        <button id="mobileLoginBtn" class="text-white hover:text-neon-pink transition-colors duration-300 text-sm" onclick="toggleLoginModal(event)">
                             <i class="fas fa-sign-in-alt"></i>
                         </button>
                     </div>
@@ -807,7 +807,7 @@
             <div class="bg-black/90 backdrop-blur-md rounded-2xl p-8 max-w-md w-full border border-white/10">
                 <div class="flex justify-between items-center mb-6">
                     <h3 class="text-2xl font-bold gradient-text">Login</h3>
-                    <button onclick="toggleLoginModal()" class="text-white/70 hover:text-white">
+                    <button onclick="toggleLoginModal(event)" class="text-white/70 hover:text-white">
                         <i class="fas fa-times text-xl"></i>
                     </button>
                 </div>
@@ -838,7 +838,7 @@
             <div class="bg-black/90 backdrop-blur-md rounded-2xl p-8 max-w-md w-full border border-white/10">
                 <div class="flex justify-between items-center mb-6">
                     <h3 class="text-2xl font-bold gradient-text">Sign Up</h3>
-                    <button onclick="toggleSignupModal()" class="text-white/70 hover:text-white">
+                    <button onclick="toggleSignupModal(event)" class="text-white/70 hover:text-white">
                         <i class="fas fa-times text-xl"></i>
                     </button>
                 </div>
