added dummy page

--- a/index.html
+++ b/index.html
@@ -367,6 +367,9 @@
                     <a href="search-results.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                     <a href="offers.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
                     <a href="why-list-with-us.html#pricing" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Plans</a>
+                    <a href="preview-test.html" class="text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium" style="background: linear-gradient(135deg, #FF3CAC, #784BA0); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-weight: 600;">
+                        <i class="fas fa-flask mr-1"></i>Preview Test
+                    </a>
                     </div>
                 
                 <!-- Right: Actions -->
@@ -459,6 +462,9 @@
                     <a href="search-results.html" class="block text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Browse</a>
                     <a href="offers.html" class="block text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Offers</a>
                     <a href="why-list-with-us.html#pricing" class="block text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium">Plans</a>
+                    <a href="preview-test.html" class="block text-text-secondary hover:text-neon-pink transition-colors duration-300 font-medium" style="background: linear-gradient(135deg, #FF3CAC, #784BA0); -webkit-background-clip: text; -webkit-text-fill-color: transparent; background-clip: text; font-weight: 600;">
+                        <i class="fas fa-flask mr-2"></i>Preview Test
+                    </a>
                     <a href="business-register.html" class="block text-neon-green hover:text-green-400 transition-colors duration-300 font-medium">
                         <i class="fas fa-plus mr-2"></i>List Business
                     </a>
