--- a/why-list-with-us.html
+++ b/why-list-with-us.html
@@ -7,6 +7,30 @@
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.tailwindcss.com?v=2"></script>
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'neon-pink': '#ff6b6b',
+                        'neon-purple': '#9c27b0',
+                        'neon-blue': '#2196f3',
+                        'text-secondary': '#9ca3af',
+                        'text-muted': '#6b7280',
+                        'charcoal': '#1a1a1a'
+                    }
+                }
+            }
+        }
+    </script>
+    <style>
+        .gradient-text {
+            background: linear-gradient(135deg, #ff6b6b, #9c27b0);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
+            background-clip: text;
+        }
+    </style>
     <style>
         * {
             margin: 0;
