--- a/business-register.html
+++ b/business-register.html
@@ -530,24 +530,6 @@
                             </ul>
                         </div>
 
-                        <!-- Elite Tier -->
-                        <div class="tier-card" data-tier="elite" onclick="selectTier('elite')">
-                            <div class="tier-header">
-                                <div class="tier-name">Elite</div>
-                                <div class="tier-price">£59</div>
-                                <div class="tier-period">per month</div>
-                            </div>
-                            <ul class="tier-features">
-                                <li><i class="fas fa-check"></i> Everything in Professional</li>
-                                <li><i class="fas fa-check"></i> Unlimited photos & media</li>
-                                <li><i class="fas fa-check"></i> Featured placement across pages</li>
-                                <li><i class="fas fa-check"></i> Advanced analytics (performance trends)</li>
-                                <li><i class="fas fa-check"></i> Marketing tools</li>
-                                <li><i class="fas fa-check"></i> Social media integration</li>
-                                <li><i class="fas fa-check"></i> Priority support</li>
-                                <li><i class="fas fa-check"></i> Custom branding options</li>
-                            </ul>
-                        </div>
                     </div>
                     
                     <div class="terms-section">
@@ -648,7 +630,7 @@ Refunds: Refunds (where applicable) will be processed back to your original paym
             
             // Show custom option for premium tiers
             const selectedTier = document.querySelector('.tier-card.selected')?.getAttribute('data-tier');
-            if (selectedTier === 'professional' || selectedTier === 'elite') {
+            if (selectedTier === 'professional') {
                 customOption.style.display = 'block';
             } else {
                 customOption.style.display = 'none';
