--- a/why-list-with-us.html
+++ b/why-list-with-us.html
@@ -260,9 +260,9 @@
 
         .pricing-grid {
             display: grid;
-            grid-template-columns: repeat(4, 1fr);
+            grid-template-columns: repeat(3, 1fr);
             gap: 24px;
-            max-width: 1400px;
+            max-width: 1200px;
             margin: 0 auto;
             align-items: stretch;
         }
@@ -589,9 +589,9 @@
 
         @media (max-width: 1200px) {
             .pricing-grid {
-                grid-template-columns: repeat(2, 1fr);
+                grid-template-columns: repeat(3, 1fr);
                 gap: 25px;
-                max-width: 900px;
+                max-width: 1000px;
             }
 
             .benefits-grid {
@@ -1113,7 +1113,7 @@
                             <li><i class="fas fa-check"></i> Business listing with category visibility</li>
                             <li><i class="fas fa-check"></i> Basic contact details</li>
                             <li><i class="fas fa-check"></i> Standard search placement</li>
-                            <li><i class="fas fa-times unavailable"></i> Business logo and photo gallery</li>
+                            <li><i class="fas fa-check"></i> Business logo and photo gallery</li>
                             <li><i class="fas fa-times unavailable"></i> Enhanced profile visibility</li>
                             <li><i class="fas fa-times unavailable"></i> Customer review highlights</li>
                             <li><i class="fas fa-times unavailable"></i> Basic booking system</li>
@@ -1136,11 +1136,13 @@
                             <li><i class="fas fa-check"></i> Everything in Free</li>
                             <li><i class="fas fa-check"></i> Business logo and photo gallery (up to 3 photos)</li>
                             <li><i class="fas fa-check"></i> Enhanced profile visibility <span class="info-icon" data-tooltip="Enhanced profile visibility means your business appears higher in search results, can be featured in relevant categories, and stands out visually to attract more customers.">ⓘ</span></li>
-                            <li><i class="fas fa-check"></i> Customer review highlights <span class="info-icon" data-tooltip="Customer review highlights display top or most relevant customer feedback directly on your profile, helping new clients see why others recommend your business.">ⓘ</span></li>
-                            <li><i class="fas fa-check"></i> Basic booking system</li>
-                            <li><i class="fas fa-times unavailable"></i> Advanced booking system with calendar sync</li>
-                            <li><i class="fas fa-times unavailable"></i> Customer management dashboard <span class="info-icon" data-tooltip="A central hub where businesses can view and manage their customer interactions — including bookings, contact details, messages, and key analytics — all in one simple dashboard.">ⓘ</span></li>
-                            <li><i class="fas fa-times unavailable"></i> Priority placement in search</li>
+                            <li><i class="fas fa-check"></i> Customer review highlights with replies <span class="info-icon" data-tooltip="Customer review highlights display top or most relevant customer feedback directly on your profile, helping new clients see why others recommend your business.">ⓘ</span></li>
+                            <li><i class="fas fa-check"></i> Booking calendar with service management</li>
+                            <li><i class="fas fa-check"></i> Automated email confirmations</li>
+                            <li><i class="fas fa-check"></i> Customer management dashboard <span class="info-icon" data-tooltip="A central hub where businesses can view and manage their customer interactions — including bookings, contact details, messages, and key analytics — all in one simple dashboard.">ⓘ</span></li>
+                            <li><i class="fas fa-check"></i> Priority placement in search</li>
+                            <li><i class="fas fa-times unavailable"></i> Advanced analytics (performance trends)</li>
+                            <li><i class="fas fa-times unavailable"></i> Marketing tools</li>
                         </ul>
                     </div>
                     <div class="btn-wrapper">
@@ -1158,12 +1160,12 @@
                         <ul class="pricing-features">
                             <li><i class="fas fa-check"></i> Everything in Starter</li>
                             <li><i class="fas fa-check"></i> Photo gallery (up to 10 photos)</li>
+                            <li><i class="fas fa-check"></i> Premium profile visibility</li>
                             <li><i class="fas fa-check"></i> Advanced booking system with calendar sync</li>
-                            <li><i class="fas fa-check"></i> Customer management dashboard <span class="info-icon" data-tooltip="A central hub where businesses can view and manage their customer interactions — including bookings, contact details, messages, and key analytics — all in one simple dashboard.">ⓘ</span></li>
-                            <li><i class="fas fa-check"></i> Priority placement in search</li>
-                            <li><i class="fas fa-check"></i> Basic analytics</li>
-                            <li><i class="fas fa-times unavailable"></i> Advanced analytics (performance trends)</li>
-                            <li><i class="fas fa-times unavailable"></i> Marketing tools</li>
+                            <li><i class="fas fa-check"></i> Stripe integration (Full payment or Deposits 10–50%)</li>
+                            <li><i class="fas fa-check"></i> SMS booking confirmations + reminders (X included)</li>
+                            <li><i class="fas fa-check"></i> Customer management dashboard (notes, history, analytics) <span class="info-icon" data-tooltip="A central hub where businesses can view and manage their customer interactions — including bookings, contact details, messages, and key analytics — all in one simple dashboard.">ⓘ</span></li>
+                            <li><i class="fas fa-check"></i> Business insights (bookings, revenue, busiest times)</li>
                         </ul>
                     </div>
                     <div class="btn-wrapper">
@@ -1171,28 +1173,6 @@
                     </div>
                 </div>
 
-                <!-- Elite Plan -->
-                <div class="pricing-card">
-                    <div class="card-content">
-                        <h3 class="pricing-name">Elite</h3>
-                        <div class="pricing-price">£59</div>
-                        <div class="pricing-period">per month</div>
-                        <p class="pricing-description">Get full visibility, exclusive tools, and custom branding. Designed for established businesses who want the highest exposure.</p>
-                        <ul class="pricing-features">
-                            <li><i class="fas fa-check"></i> Everything in Professional</li>
-                            <li><i class="fas fa-check"></i> Unlimited photos & media</li>
-                            <li><i class="fas fa-check"></i> Featured placement across pages</li>
-                            <li><i class="fas fa-check"></i> Advanced analytics (performance trends)</li>
-                            <li><i class="fas fa-check"></i> Marketing tools</li>
-                            <li><i class="fas fa-check"></i> Social media integration</li>
-                            <li><i class="fas fa-check"></i> Priority support</li>
-                            <li><i class="fas fa-check"></i> Custom branding options</li>
-                        </ul>
-                    </div>
-                    <div class="btn-wrapper">
-                        <a href="business-register.html?plan=elite" class="btn btn-secondary">Choose Elite</a>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
