--- a/index.html
+++ b/index.html
@@ -1031,6 +1031,8 @@
         </div>
     </div>
 
+    <!-- Business Manager Script -->
+    <script src="business-manager.js"></script>
 
     <script>
         // Handle search form submission
