--- a/business-dashboard-fixed.html
+++ b/business-dashboard-fixed.html
@@ -528,9 +528,9 @@
                     
                     <div class="upgrade-section">
                         <h4>Manage Subscription</h4>
-                        <button class="btn-upgrade" onclick="manageSubscription()">
-                            <i class="fas fa-credit-card"></i> Manage Payment
-                        </button>
+                        <a href="business-plan-management.html" class="btn-upgrade" style="text-decoration: none; display: inline-block;">
+                            <i class="fas fa-credit-card"></i> Manage Plan
+                        </a>
                     </div>
                 </div>
                 
