--- a/search-results.html
+++ b/search-results.html
@@ -457,7 +457,7 @@
                                 <i class="fas fa-map-marker-alt mr-2"></i>
                                 123 High Street, London SW1A 1AA
                             </p>
-                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow">
+                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow" onclick="goToBusinessProfile('royal-hair-studio')">
                                 Book Now
                             </button>
                         </div>
@@ -485,7 +485,7 @@
                                 <i class="fas fa-map-marker-alt mr-2"></i>
                                 456 King's Road, London SW3 4LX
                             </p>
-                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow">
+                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow" onclick="goToBusinessProfile('elite-barber-shop')">
                                 Book Now
                             </button>
                         </div>
@@ -513,7 +513,7 @@
                                 <i class="fas fa-map-marker-alt mr-2"></i>
                                 789 Oxford Street, London W1C 1JN
                             </p>
-                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow">
+                            <button class="w-full py-3 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 neon-glow" onclick="goToBusinessProfile('glamour-beauty-lounge')">
                                 Book Now
                             </button>
                         </div>
@@ -653,7 +653,7 @@
                                 </div>
                                 <p class="text-neon-pink text-xs font-medium mb-2">Hair Salon</p>
                                 <p class="text-light-grey text-xs mb-3">123 High Street, London</p>
-                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('classic-cuts')">
                                     Book Now
                                 </button>
                             </div>
@@ -679,7 +679,7 @@
                                 </div>
                                 <p class="text-neon-pink text-xs font-medium mb-2">Barber Shop</p>
                                 <p class="text-light-grey text-xs mb-3">456 King's Road, London</p>
-                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('elite-barber-shop')">
                                     Book Now
                                 </button>
                             </div>
@@ -705,7 +705,7 @@
                                 </div>
                                 <p class="text-neon-pink text-xs font-medium mb-2">Beauty Salon</p>
                                 <p class="text-light-grey text-xs mb-3">789 Oxford Street, London</p>
-                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('glamour-beauty-lounge')">
                                     Book Now
                                 </button>
                             </div>
@@ -738,7 +738,7 @@
                                     </div>
                                     <p class="text-neon-pink text-xs font-medium mb-2">Hair Salon</p>
                                     <p class="text-light-grey text-xs mb-3">123 High Street, London</p>
-                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('classic-cuts')">
                                         Book Now
                                     </button>
                                 </div>
@@ -764,7 +764,7 @@
                                     </div>
                                     <p class="text-neon-pink text-xs font-medium mb-2">Barber Shop</p>
                                     <p class="text-light-grey text-xs mb-3">456 King's Road, London</p>
-                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('elite-barber-shop')">
                                         Book Now
                                     </button>
                                 </div>
@@ -790,7 +790,7 @@
                                     </div>
                                     <p class="text-neon-pink text-xs font-medium mb-2">Beauty Salon</p>
                                     <p class="text-light-grey text-xs mb-3">789 Oxford Street, London</p>
-                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm">
+                                    <button class="w-full py-2 rounded-lg bg-gradient-to-r from-neon-pink to-neon-purple text-white font-semibold hover:from-neon-purple hover:to-neon-blue transition-all duration-300 text-sm" onclick="goToBusinessProfile('glamour-beauty-lounge')">
                                         Book Now
                                     </button>
                                 </div>
@@ -1934,6 +1934,12 @@
                 });
             });
         });
+
+        // Handle Book Now button clicks - redirect to business profile
+        function goToBusinessProfile(businessId) {
+            // Redirect to business profile page where customers can add services
+            window.location.href = `business-profile.html?business=${businessId}`;
+        }
     </script>
     
     <!-- Footer -->
